disable gzip for owncloud as it's know to cause problems

--- a/cookbooks/apache/templates/default/owncloud.conf.erb
+++ b/cookbooks/apache/templates/default/owncloud.conf.erb
@@ -24,6 +24,8 @@
     # Requires Apache >= 2.4
     SSLCompression off
 
+    SetEnv no-gzip 1
+
     DocumentRoot <%= @docroot %>
     <Directory "<%= @docroot %>">
       Options None
