enable mod_deflate

--- a/cookbooks/apache/templates/default/apache24/httpd.conf.erb
+++ b/cookbooks/apache/templates/default/apache24/httpd.conf.erb
@@ -100,7 +100,7 @@ LoadModule reqtimeout_module libexec/apache24/mod_reqtimeout.so
 LoadModule filter_module libexec/apache24/mod_filter.so
 #LoadModule substitute_module libexec/apache24/mod_substitute.so
 #LoadModule sed_module libexec/apache24/mod_sed.so
-#LoadModule deflate_module libexec/apache24/mod_deflate.so
+LoadModule deflate_module libexec/apache24/mod_deflate.so
 LoadModule mime_module libexec/apache24/mod_mime.so
 LoadModule log_config_module libexec/apache24/mod_log_config.so
 #LoadModule log_debug_module libexec/apache24/mod_log_debug.so
