enable deflate for blog

--- a/cookbooks/apache/templates/default/unwiredcouch.com.conf.erb
+++ b/cookbooks/apache/templates/default/unwiredcouch.com.conf.erb
@@ -32,6 +32,7 @@
 
     DocumentRoot <%= @docroot %>
     <Directory <%= @docroot %>>
+      SetOutputFilter DEFLATE
       Options None
       Options +FollowSymlinks
       AllowOverride All
