update collectd cookbook with homerouter scripts

--- a/cookbooks/collectd/templates/default/custom_types.db.erb
+++ b/cookbooks/collectd/templates/default/custom_types.db.erb
@@ -9,3 +9,6 @@ messages_quarantined    value:DERIVE:0:U
 celsius_current         value:GAUGE:-20:100
 celsius_min             value:GAUGE:-20:100
 celsius_max             value:GAUGE:-20:100
+
+# ipfw
+dynamic_rules           value:GAUGE:0:U
