--- a/cookbooks/collectd/templates/default/collectd.conf.erb
+++ b/cookbooks/collectd/templates/default/collectd.conf.erb
@@ -73,3 +73,27 @@ LoadPlugin write_graphite
    </Instance>
 </Plugin>
 <% end %>
+
+<% if @has_bind %>
+LoadPlugin "bind"
+<Plugin "bind">
+  URL "http://localhost:8053/"
+  OpCodes         true
+  QTypes          true
+
+  ServerStats     true
+  ZoneMaintStats  true
+  ResolverStats   false
+  MemoryStats     true
+
+  <View "_default">
+    QTypes        true
+    ResolverStats true
+    CacheRRSets   true
+
+    Zone "127.in-addr.arpa/IN"
+    Zone "3.168.192.in-addr.arpa/IN"
+    Zone "nyc.unwiredcouch.com/IN"
+  </View>
+</Plugin>
+<% end %>
