improve nagios setup
this splits up nagios by instances per subdomain and also moves custom
non-host checks to fake vhosts.

--- a/cookbooks/nagios/templates/default/nagios_apache.conf.erb
+++ b/cookbooks/nagios/templates/default/nagios_apache.conf.erb
@@ -1,5 +1,5 @@
 <VirtualHost *:443>
-    ServerName nagios.unwiredcouch.com
+    ServerName <%= node[:nagios][:host] || "nagios.unwiredcouch.com" %>
     SSLEngine On
 
     SSLCertificateFile "/usr/local/ssl/star.unwiredcouch.com.cert"
