--- a/cookbooks/nagios/templates/default/templates.cfg.erb
+++ b/cookbooks/nagios/templates/default/templates.cfg.erb
@@ -46,6 +46,20 @@ define host{
         register			0		; DONT REGISTER THIS DEFINITION - ITS NOT A REAL HOST, JUST A TEMPLATE!
 	}
 
+define host{
+        name				fake-host	; The name of this host template
+        use				generic-host	; This template inherits other values from the generic-host template
+        check_period			24x7		; By default, FreeBSD hosts are checked round the clock
+        check_interval			5		; Actively check the host every 5 minutes
+        retry_interval			1		; Schedule host check retries at 1 minute intervals
+        max_check_attempts		10		; Check each FreeBSD host 10 times (max)
+        check_command           	check-host-alive ; Default command to check FreeBSD hosts
+        notification_interval		120		; Resend notifications every 2 hours
+        notification_options		d,u,r		; Only send notifications for specific host states
+        contact_groups			admins		; Notifications get sent to the admins by default
+        register			0		; DONT REGISTER THIS DEFINITION - ITS NOT A REAL HOST, JUST A TEMPLATE!
+	}
+
 define service{
         name                            generic-service 	; The 'name' of this service template
         active_checks_enabled           1       		; Active service checks are enabled
