--- a/cookbooks/apache/templates/default/yagd.config.php.erb
+++ b/cookbooks/apache/templates/default/yagd.config.php.erb
@@ -7,7 +7,10 @@ $CONFIG = array(
         'Graphite' => '/graphite.php',
         'Twitter' => '/tweets.php'
     ],
-    'graphitehost' => "https://graphite.unwiredcouch.com",
+    'graphite' => [
+      'host' => "https://graphite.unwiredcouch.com",
+      'hidelegend' => false
+    ],
     'hosts' => array(
       <% @hosts.each do |host| %>
        "<%= host[:name] %>" => array(
