add smokeping config updated with NYC ISPs

--- a/cookbooks/apache/templates/default/smokeping.config.erb
+++ b/cookbooks/apache/templates/default/smokeping.config.erb
@@ -78,7 +78,7 @@ title = Top Median Roundtrip Time
 menu = by Median
 format = Median RTT %f seconds
 
-+ overview 
++ overview
 
 width = 600
 height = 50
@@ -134,7 +134,7 @@ host = /nyc/etsy /nyc/google-dns /nyc/leviathan /nyc/psylocke /nyc/ishikawa
 ++ etsy
 menu = etsy
 title = etsy
-host = 38.106.64.123
+host = 192.147.0.123
 
 ++ google-dns
 menu = google-dns
@@ -156,3 +156,26 @@ menu = ishikawa
 title = ishikawa
 host = 192.168.3.1
 
++ ISP
+menu = ISP
+title = ISP
+
+++ 192-168-3-1
+menu = 192-168-3-1
+title = 192-168-3-1
+host = 192.168.3.1
+
+++ cpe-66-108-32-1-nyc-res-rr-com
+menu = cpe-66-108-32-1-nyc-res-rr-com
+title = cpe-66-108-32-1-nyc-res-rr-com
+host = 66.108.32.1
+
+++ tge-0-10-0-31-nydbny7001h-nyc-rr-com
+menu = tge-0-10-0-31-nydbny7001h-nyc-rr-com
+title = tge-0-10-0-31-nydbny7001h-nyc-rr-com
+host = 68.173.200.65
+
+++ agg111-nyclnyrg01r-nyc-rr-com
+menu = agg111-nyclnyrg01r-nyc-rr-com
+title = agg111-nyclnyrg01r-nyc-rr-com
+host = 68.173.198.104
