add more mrtazz procmail rules

--- a/cookbooks/procmail/templates/default/mrtazz/procmail-maillists.rc.erb
+++ b/cookbooks/procmail/templates/default/mrtazz/procmail-maillists.rc.erb
@@ -10,3 +10,16 @@ $HOME/Mails/<%= list["name"] %>/
 :0:
 * ^(From).*twitter.com
 $HOME/Mails/twitter/
+
+:0:
+* ^(From).*linkedin.com
+$HOME/Mails/linkedin/
+
+:0:
+* ^(From).*amazon.(de|com)
+$HOME/Mails/amazon/
+
+:0:
+* ^Subject:Your receipt from NY Waterway*
+$HOME/Mails/Archive/
+
