set cache expires on unwiredcouch.com apache vhost

--- a/cookbooks/apache/templates/default/unwiredcouch.com.conf.erb
+++ b/cookbooks/apache/templates/default/unwiredcouch.com.conf.erb
@@ -33,6 +33,8 @@
     DocumentRoot <%= @docroot %>
     <Directory <%= @docroot %>>
       SetOutputFilter DEFLATE
+      ExpiresActive On
+      ExpiresDefault "access plus 10 minutes"
       Options None
       Options +FollowSymlinks
       AllowOverride All
