--- a/cookbooks/nagios/templates/default/commands.cfg.erb
+++ b/cookbooks/nagios/templates/default/commands.cfg.erb
@@ -219,6 +219,11 @@ define command{
 	}
 
 
+define command{
+        command_name    check-home-internet
+        command_line    $USER1$/check_ping -H syn.nyc.unwiredcouch.com -w 3000.0,80% -c 5000.0,100% -p 5
+        }
+
 
 
 ################################################################################
