--- a/cookbooks/nagios/templates/default/external_fake_services.cfg.erb
+++ b/cookbooks/nagios/templates/default/external_fake_services.cfg.erb
@@ -13,8 +13,8 @@ define service{
 define service{
         use                             local-service
         host_name                       ExternalChecks
-        service_description             redis URL shortener
-        check_command                   check_tcp_remote!catfish.redistogo.com!9424
+        service_description             mrtz.cc Redis instance
+        check_command                   check_tcp_remote!ec2-107-22-210-83.compute-1.amazonaws.com!10179
         }
 define service{
         use                             local-service
@@ -29,3 +29,9 @@ define service{
         check_command                   check_http_remote!www.unwiredcouch.com
         }
 
+define service{
+        use                             local-service
+        host_name                       ExternalChecks
+        service_description             home internet
+        check_command                   check-home-internet
+        }
