don't email for nagios alerts

--- a/cookbooks/nagios/templates/default/contacts.cfg.erb
+++ b/cookbooks/nagios/templates/default/contacts.cfg.erb
@@ -27,5 +27,5 @@ define contact {
 define contactgroup{
         contactgroup_name       admins
         alias                   Nagios Administrators
-        members                 mrtazz,mrtazz_pushover,slack
+        members                 mrtazz_pushover,slack
         }
