add disk plugin to collectd config

--- a/cookbooks/collectd/templates/default/collectd.conf.erb
+++ b/cookbooks/collectd/templates/default/collectd.conf.erb
@@ -66,6 +66,11 @@ LoadPlugin write_graphite
 </Plugin>
 <% end -%>
 
+LoadPlugin disk
+<Plugin "disk">
+  IgnoreSelected true
+</Plugin>
+
 <% if @has_apache %>
 <Plugin "apache">
    <Instance "apache80">
